# navno_notebooks

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  metadata.ipynb  pyproject.toml  sitemap.ipynb
.github/workflows/: ci.yml
src/navno_notebooks/: __init__.py  metadata.py  sitemap.py
src/navno_notebooks/parser/: __init__.py  html.py  macros.py  section.py  top_level.py
tests/: test_content_page.py  test_metadata.py  test_sitemap.py
