[project]
name = "navno-notebooks"
version = "0.1.0"
description = "Jupyter notatbøker for å konvertere Nav.no til en vektordatabase"
readme = "README.md"
requires-python = ">=3.12, <=3.13"
dependencies = [
    "httpx>=0.27.2",
    "ipywidgets>=8.1.5",
    "notebook>=7.2.2",
    "polars[plot]>=1.12.0",
    "pydantic>=2.9.2",
    "rich>=13.9.4",
    "yarl>=1.17.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
